# snake

./: Readme.md
generic_controller_plugin/: CMakeLists.txt  package.xml
generic_controller_plugin/include/: generic_controller_plugin.h
generic_controller_plugin/sdf/: model.config  model.sdf
generic_controller_plugin/src/: generic_controller_plugin.cpp
generic_controller_plugin/srv/: JointProperties.srv  SetPIDParameters.srv
scripts/: cpg.py  display_events.py  displaydepth.py  gait3.py  gait4.py  gait5.py  gaits.py  gaitwithkeyboard.py  getkey.py
wheel_less_snake_controller/: CMakeLists.txt  package.xml
wheel_less_snake_controller/include/: wheel_less_snake_controller.h
wheel_less_snake_controller/src/: wheel_less_snake_controller.cpp
wl_snake_control/: CMakeLists.txt  package.xml
wl_snake_control/config/: wl_snake_control.yaml
wl_snake_control/launch/: wl_snake_control.launch
wl_snake_description/: CMakeLists.txt  model.config  package.xml
wl_snake_description/meshes/: rotary_input.dae  rotary_output.dae
wl_snake_description/sdf/: model.rsdf  model.sdf
wl_snake_description/sdf/wl_snake/: model.config
wl_snake_gazebo/: CMakeLists.txt  package.xml
wl_snake_gazebo/launch/: wl_snake.launch
wl_snake_gazebo/worlds/: wl_snake.world
wl_snake_scan/: CMakeLists.txt  package.xml
wl_snake_scan/src/: scan.cpp
